--- a/home.html
+++ b/home.html
@@ -17,39 +17,42 @@
       />
    </head>
    <body>
-      <header>
-         <img src="assets/logo.svg" alt="Rocket.Q Logo" />
-      </header>
-      <main>
-         <div class="container">
-            <section>
-               <h2>Entre como participante</h2>
-               <form>
-                  <label class="sr-only" for="room-id">Codigo da Sala</label>
-                  <input
-                     type="number"
-                     id="room-id"
-                     placeholder="Código da Sala"
-                  />
-                  <button>
-                     <img src="assets/enter-room.svg" alt="Entrar na Sala" />
-                     Entrar na Sala
-                  </button>
-               </form>
-            </section>
-            <div class="separator">
-               <div></div>
-               <div>ou</div>
-               <div></div>
+      <div id="home" class="content">
+         <header>
+            <img src="assets/logo.svg" alt="Rocket.Q Logo" />
+         </header>
+         <div id="bg"></div>
+         <main>
+            <div class="container">
+               <section>
+                  <h2>Entre como participante</h2>
+                  <form>
+                     <label class="sr-only" for="room-id">Codigo da Sala</label>
+                     <input
+                        type="number"
+                        id="room-id"
+                        placeholder="Código da Sala"
+                     />
+                     <button>
+                        <img src="assets/enter-room.svg" alt="Entrar na Sala" />
+                        Entrar na Sala
+                     </button>
+                  </form>
+               </section>
+               <div class="separator">
+                  <div></div>
+                  <div>ou</div>
+                  <div></div>
+               </div>
+               <section>
+                  <h2>Crie sua própria sala de forma fácil</h2>
+                  <a href="create-room.html" class="button outlined">
+                     <img src="assets/users.svg" alt="Criar sala" />
+                     Criar Sala
+                  </a>
+               </section>
             </div>
-            <section>
-               <h2>Crie sua própria sala de forma fácil</h2>
-               <a href="create-room.html">
-                  <img src="assets/users.svg" alt="Criar sala" />
-                  Criar Sala
-               </a>
-            </section>
-         </div>
-      </main>
+         </main>
+      </div>
    </body>
 </html>
